# hippocampus

./: .githooks-installed  .githooks-test  .gitignore  .mcp.json  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  install.sh  pyproject.toml  run_pipeline_test.py
.aider.tags.cache.v4/: cache.db
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.hippo-smoke/: code-signatures.json  hippocampus-index.json
.hippocampus/: config.yaml  hippocampus-viz.html  structure-prompt.md
claude_skills/hippo-g/: SKILL.md
config/: hippocampus-llm.example.yaml
docs/: architect-role-design.md  git-hooks.md  repomap-integration.md
fangan/: ANALYSIS.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  hippo_plan.md  repomix-structure-plan.md
plans/: navigation-memory-system-plan.md
scripts/: demo_pipeline.py  install.sh
scripts/git-hooks/: post-commit  pre-commit
src/hippocampus/: __init__.py  api.py  api_support.py  architec_llm_compat.py  architecture_rules.py  cli.py  cli_architect.py  cli_architect_commands.py  cli_architect_reports.py  cli_commands_core.py  cli_commands_pipeline.py  cli_commands_project_bootstrap.py  cli_commands_structure_prompt.py  cli_hooks.py  cli_pipeline_command_builders.py  cli_pipeline_helpers.py  cli_query.py  cli_snapshot.py  config.py  config_gateway_models.py  config_gateway_support.py  config_merge_support.py  constants.py  (+9 more)
tests/: benchmark_trim.sh  conftest.py  incremental_cache_helpers.py  scoring_query_fixtures.py  test_aider_contract.py  test_architec_metrics.py  test_architect_tool_split.py  test_bundle_state.py  test_cli_architect_commands.py  test_cli_core_commands.py  test_cli_integration.py  test_cli_pipeline_helpers.py  test_comprehensive_navigation.py  test_config.py  test_diff.py  test_hippocampus_package_boundaries.py  test_incremental_cache.py  test_incremental_cache_hashes.py  test_incremental_cache_phase2.py  test_incremental_cache_phase3.py  test_index_gen_phase1_runner.py  test_index_gen_reporting.py  test_install_resources.py  test_install_script.py  test_llm_transport.py  test_llm_validators.py  test_llmgateway_runtime.py  test_navigate_helpers.py  test_navigate_snippets.py  test_parsers.py  test_path_validation.py  test_prompt_loader.py  test_prompt_propagation.py  test_public_api.py  test_ranker_fallback.py  test_repomap_snippets.py  test_scoring_queries.py  test_scoring_query.py  test_scoring_roles.py  test_search.py  (+16 more)
(+196 files in other folders)
