[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippocampus"
version = "0.1.0"
description = "Code repository indexing and analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "tree-sitter>=0.25.2",
    "networkx>=3.0",
    "grep-ast>=0.3.0",
    "httpx>=0.24",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
repomap = [
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
    "diskcache>=5.6.0",
    "pygments>=2.17.0",
]

[project.scripts]
hippo = "hippocampus.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hippocampus" = ["resources/queries/*.scm", "resources/prompts/*.md"]
