[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippocampus"
version = "0.1.5"
description = "Code repository indexing, navigation, and structure analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["code-indexing", "code-navigation", "repository-analysis", "developer-tools", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "tree-sitter>=0.25.2",
    "networkx>=3.0",
    "grep-ast>=0.3.0",
    "httpx>=0.24",
    "aiohttp>=3.9",
    "diskcache>=5.6.0",
    "pygments>=2.17.0",
    "tree-sitter-language-pack>=0.13.0",
    "llmgateway>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
llm = []
repomap = [
    "tree-sitter>=0.25.2",
    ]

[project.scripts]
hippo = "hippocampus.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hippocampus*"]

[tool.setuptools.package-data]
"hippocampus" = [
    "resources/prompts/*.md",
    "resources/queries/*.scm",
    "resources/templates/*.html",
]
